testdata/baselines/reference/submodule/conformance/jsDeclarationsFunctionClassesCjsExportAssignment(target=es2015).errors.txt
context.js(4,14): error TS1340: Module './timer' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./timer')'?
context.js(5,14): error TS1340: Module './hook' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./hook')'?
context.js(33,11): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
context.js(34,14): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
context.js(36,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
context.js(36,18): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
hook.js(2,20): error TS1340: Module './context' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./context')'?
hook.js(8,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
timer.js(5,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


==== timer.js (1 errors) ====
    /**
     * @param {number} timeout
     */
    function Timer(timeout) {
        this.timeout = timeout;
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    module.exports = Timer;
==== hook.js (2 errors) ====
    /**
     * @typedef {(arg: import("./context")) => void} HookHandler
                       ~~~~~~~~~~~~~~~~~~~
!!! error TS1340: Module './context' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./context')'?
     */
    /**
     * @param {HookHandler} handle
     */
    function Hook(handle) {
        this.handle = handle;
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    module.exports = Hook;
    
==== context.js (6 errors) ====
    /**
     * Imports
     *
     * @typedef {import("./timer")} Timer
                 ~~~~~~~~~~~~~~~~~
!!! error TS1340: Module './timer' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./timer')'?
     * @typedef {import("./hook")} Hook
                 ~~~~~~~~~~~~~~~~
!!! error TS1340: Module './hook' does not refer to a type, but is used as a type here. Did you mean 'typeof import('./hook')'?
     * @typedef {import("./hook").HookHandler} HookHandler
     */
    
    /**
     * Input type definition
     *
     * @typedef {Object} Input
     * @prop {Timer} timer
     * @prop {Hook} hook
     */
     
    /**
     * State type definition
     *
     * @typedef {Object} State
     * @prop {Timer} timer
     * @prop {Hook} hook
     */
    
    /**
     * New `Context`
     *
     * @class
     * @param {Input} input
     */
    
    function Context(input) {
        if (!(this instanceof Context)) {
              ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
          return new Context(input)
                 ~~~~~~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
        }
        this.state = this.construct(input);
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
                     ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    Context.prototype = {
        /**
         * @param {Input} input
         * @param {HookHandler=} handle
         * @returns {State}
         */
        construct(input, handle = () => void 0) {
            return input;
        }
    }
    module.exports = Context;
    